--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,17 +17,17 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 20.10.0
 
       - name: Install Dependencies
         run: npm install
 
-      - name: Run Tests
-        run: npm test
+      - name: Run ecap app
+        run: npm start
 
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: your-app-name
-          heroku_email: your-heroku-email@example.com
+          heroku_api_key: 2604bc34-82fc-41b2-be2f-766173d4cc94
+          heroku_app_name: ecap
+          heroku_email: gajendrarajoriya91@gmail.com
