--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "pm2": "^5.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   }
